# sessgraph

./: AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: DEVELOPMENT_PROCESS.md  README.md
docs/adr/: 0000-template.md  0001-p0-core-data-model.md  0002-p0-activation-runner.md  0003-sync-tool-execution.md  0004-wait-resume-user-flow.md  0005-async-job-timer-semantics.md  0006-memory-context-semantics.md  0007-safety-auth-semantics.md  0008-approval-flow-semantics.md  0009-parent-child-session-semantics.md
docs/openapi/: README.md
docs/state/: README.md  action-queue.md  inbox.md  phase-two-plan.md  post-p1-reevaluation.md  post-safety-auth-reevaluation.md  pr-queue.md  project-state.md  project-status.md  risks.md
docs/tasks/: T-0001-bootstrap-governance.md  T-0002-p0-data-model.md  T-0003-review-planning-files.md  T-0004-localize-agent-docs.md  T-0005-p0-inmemory-stores.md  T-0006-p0-activation-runner.md  T-0007-sync-tool-execution.md  T-0008-wait-resume-user-flow.md  T-0009-p0-closeout-review.md  T-0010-checkpoint-recovery-example.md  T-0011-phase-two-planning.md  T-0012-package-release-hygiene.md  T-0013-async-job-timer-adr.md  T-0020-safety-auth-adr.md  (+15 more)
examples/: async_job_session.py  basic_session.py  checkpoint_recovery.py  memory_compaction_session.py  timer_session.py
tests/: test_activation_runner.py  test_auth.py  test_checkpoint_recovery.py  test_children.py  test_context.py  test_core_models.py  test_import.py  test_inmemory_stores.py  test_jobs.py  test_memory_compaction.py  test_timers.py  test_tools.py  test_wait_resume.py
(+12 files in other folders)
